[gd_scene load_steps=6 format=2]

[ext_resource path="res://World Environments/SpaceEnvironment.tres" type="Environment" id=1]
[ext_resource path="res://World Objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Helpers/GameWorld.gd" type="Script" id=3]
[ext_resource path="res://World Objects/Ship.tscn" type="PackedScene" id=4]
[ext_resource path="res://Helpers/Inventory.gd" type="Script" id=5]

[node name="GameWorld" type="Spatial"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="NormalUI" type="Control" parent="UILayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsHUD" type="ColorRect" parent="UILayer/NormalUI"]
margin_left = 32.0
margin_top = 458.0
margin_right = 202.0
margin_bottom = 578.0
color = Color( 0.254902, 0.254902, 0.254902, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UILayer/NormalUI/StatsHUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 78.0
margin_bottom = 58.0
text = "O2: 100%
Temp: 28C
Water Reclaimer OK
Oxygen Reclaimer OK
Thirst: 100%
Hunger: 100%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugHUD" type="ColorRect" parent="UILayer/NormalUI"]
margin_left = 32.0
margin_top = 32.0
margin_right = 532.0
margin_bottom = 112.0
color = Color( 0.254902, 0.254902, 0.254902, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="UILayer/NormalUI/DebugHUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 466.0
margin_bottom = 41.0
text = "Escape The Robots And Oh Gosh They're Coming Run 2: The Better One
Copyright (c) 2020 Johnny Stene. Some Rights Reserved."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionLabel" type="Label" parent="UILayer/NormalUI/DebugHUD"]
margin_left = 10.0
margin_top = 42.0
margin_right = 73.0
margin_bottom = 56.0
text = "XYZ: 0,0,0"

[node name="FPSLabel" type="Label" parent="UILayer/NormalUI/DebugHUD"]
margin_left = 10.0
margin_top = 56.0
margin_right = 50.0
margin_bottom = 70.0
text = "FPS: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPRect" type="ColorRect" parent="UILayer/NormalUI"]
margin_left = 384.0
margin_top = 504.0
margin_right = 640.0
margin_bottom = 568.0
color = Color( 0.254902, 0.254902, 0.254902, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UILayer/NormalUI/HPRect"]
margin_left = 119.0
margin_top = 10.0
margin_right = 137.0
margin_bottom = 24.0
text = "HP"

[node name="ColorRect" type="ColorRect" parent="UILayer/NormalUI/HPRect"]
margin_left = 28.0
margin_top = 28.0
margin_right = 228.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshairs" type="ColorRect" parent="UILayer/NormalUI"]
margin_left = 510.0
margin_top = 297.0
margin_right = 512.0
margin_bottom = 303.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshairs2" type="ColorRect" parent="UILayer/NormalUI/Crosshairs"]
margin_left = -2.0
margin_top = 2.0
margin_right = 4.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="UILayer/NormalUI"]
margin_left = 950.0
margin_right = 990.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="InventoryUI" type="Control" parent="UILayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInventoryBackground" type="ColorRect" parent="UILayer/InventoryUI"]
margin_left = 160.0
margin_top = 172.0
margin_right = 480.0
margin_bottom = 428.0
color = Color( 0.254902, 0.254902, 0.254902, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventorySpace0" type="ColorRect" parent="UILayer/InventoryUI/PlayerInventoryBackground"]
margin_left = 32.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 96.0
color = Color( 1, 1, 1, 0.396078 )

[node name="InventorySpace1" type="ColorRect" parent="UILayer/InventoryUI/PlayerInventoryBackground"]
margin_left = 128.0
margin_top = 32.0
margin_right = 192.0
margin_bottom = 96.0
color = Color( 1, 1, 1, 0.396078 )

[node name="InventorySpace2" type="ColorRect" parent="UILayer/InventoryUI/PlayerInventoryBackground"]
margin_left = 224.0
margin_top = 32.0
margin_right = 288.0
margin_bottom = 96.0
color = Color( 1, 1, 1, 0.396078 )

[node name="InventorySpace3" type="ColorRect" parent="UILayer/InventoryUI/PlayerInventoryBackground"]
margin_left = 32.0
margin_top = 128.0
margin_right = 96.0
margin_bottom = 192.0
color = Color( 1, 1, 1, 0.396078 )

[node name="InventorySpace4" type="ColorRect" parent="UILayer/InventoryUI/PlayerInventoryBackground"]
margin_left = 128.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 192.0
color = Color( 1, 1, 1, 0.396078 )

[node name="InventorySpace5" type="ColorRect" parent="UILayer/InventoryUI/PlayerInventoryBackground"]
margin_left = 224.0
margin_top = 128.0
margin_right = 288.0
margin_bottom = 192.0
color = Color( 1, 1, 1, 0.396078 )

[node name="Label" type="Label" parent="UILayer/InventoryUI/PlayerInventoryBackground"]
margin_top = 220.0
margin_right = 320.0
margin_bottom = 234.0
text = "PLAYER INVENTORY"
align = 1

[node name="OtherInventory" type="ColorRect" parent="UILayer/InventoryUI"]
margin_left = 544.0
margin_top = 172.0
margin_right = 864.0
margin_bottom = 428.0
color = Color( 0.254902, 0.254902, 0.254902, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventorySpace0" type="ColorRect" parent="UILayer/InventoryUI/OtherInventory"]
margin_left = 32.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 96.0
color = Color( 1, 1, 1, 0.396078 )

[node name="InventorySpace1" type="ColorRect" parent="UILayer/InventoryUI/OtherInventory"]
margin_left = 128.0
margin_top = 32.0
margin_right = 192.0
margin_bottom = 96.0
color = Color( 1, 1, 1, 0.396078 )

[node name="InventorySpace2" type="ColorRect" parent="UILayer/InventoryUI/OtherInventory"]
margin_left = 224.0
margin_top = 32.0
margin_right = 288.0
margin_bottom = 96.0
color = Color( 1, 1, 1, 0.396078 )

[node name="InventorySpace3" type="ColorRect" parent="UILayer/InventoryUI/OtherInventory"]
margin_left = 32.0
margin_top = 128.0
margin_right = 96.0
margin_bottom = 192.0
color = Color( 1, 1, 1, 0.396078 )

[node name="InventorySpace4" type="ColorRect" parent="UILayer/InventoryUI/OtherInventory"]
margin_left = 128.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 192.0
color = Color( 1, 1, 1, 0.396078 )

[node name="InventorySpace5" type="ColorRect" parent="UILayer/InventoryUI/OtherInventory"]
margin_left = 224.0
margin_top = 128.0
margin_right = 288.0
margin_bottom = 192.0
color = Color( 1, 1, 1, 0.396078 )

[node name="Label" type="Label" parent="UILayer/InventoryUI/OtherInventory"]
margin_top = 220.0
margin_right = 320.0
margin_bottom = 234.0
text = "NEARBY INVENTORY"
align = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="Ship" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.870186, -0.412507, 0.269469, -0.282987, 0.866116, 0.412021, -0.403353, 0.282279, -0.870417, 18.4825, -0.597152, 17.4463 )

[node name="Chunks" type="Spatial" parent="."]
